# cpp-template-project

docs/source/: index.rst  new_page.rst
include/: arabic.h  arabic2.h  sess17.h
src/: CMakeLists.txt  arabic.cpp  arabic.txt  arabic2.cpp  main.cpp  main_arabic.cpp  main_arabic2.cpp  sess17.cpp  sess17.txt
tests/: CMakeLists.txt  arabic2_test.cpp  arabic_test.cpp  sess17_test.cpp
